FEV-58 Ensure link text provides sufficient contrast

--- a/skins/kdark/css/layout.css
+++ b/skins/kdark/css/layout.css
@@ -2041,7 +2041,7 @@ background-image:  linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transpa
     -moz-border-radius: 2px;
     border-radius: 24px;
     background-color: #00d6ff;
-    color: white;
+    color: #212121;
     text-align: center;
     padding-top: 8px;
     height: 24px;
